--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,18 +7,20 @@
     <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.js"></script>
     <![endif]-->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-responsive.min.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="page-header">
-          <h1>C1nde blog</h3>
+          <h1>{% if page.title %} {{ page.title }} | {% endif %}C1nde blog</h1>
         </div>
-{{ content }}
+        <div class="span6 well">
+          {{content}}
+        </div>
       </div>
     </div> <!-- /container -->
   </body>
