--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,19 @@
         <div class="span6 well">
           {{content}}
         </div>
+        <div class="span4 well text-center">
+          <img src="/assets/img/shebang.png" alt="My photo" class="img-rounded" />
+          <h2>About me</h2>
+          <p>
+            Working at <a href="http://intspirit.com/" target="_blank"><strong>IntSpirit</strong></a>
+          </p>
+          <p>
+            All the stuff developer and *nix admin
+          </p>
+          <p>
+            Blog powered by <a href="https://github.com/mojombo/jekyll" target="_blank">Jekyll</a>
+          </p>
+        </div>
       </div>
     </div> <!-- /container -->
   </body>
