--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,17 @@
           {{content}}
 
           {% if page.url != "/index.html" %}
+            <div id="disqus_thread"></div>
+            <script type="text/javascript">
+              var disqus_shortname = 'c1nde';
+              (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                  dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+            <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
             <ul class="pager">
               {% if page.previous %} 
                 <li class="previous">
