--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,10 @@
     <![endif]-->
     <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/scroll.top.js"></script>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-39085412-1']);
@@ -71,6 +73,7 @@
           </p>
         </div>
       </div>
+      <div class="backToTop text-center">&#8593; top</div>
     </div> <!-- /container -->
   </body>
 </html>
