updated_at stats

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="/assets/js/scroll.top.js"></script>
+    <script src="/assets/js/github.js"></script>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-39085412-1']);
@@ -59,18 +60,25 @@
             </ul>
           {% endif %}
         </div>
-        <div class="span4 well text-center">
-          <img src="/assets/img/shebang.png" alt="My photo" class="img-rounded" />
-          <h2>About me</h2>
-          <p>
-            Working at <a href="http://intspirit.com/" target="_blank"><strong>IntSpirit</strong></a>
-          </p>
-          <p>
-            All the stuff developer and *nix admin
-          </p>
-          <p>
-            Blog powered by <a href="https://github.com/mojombo/jekyll" target="_blank">Jekyll</a>
-          </p>
+        <div class="span4 text-center">
+          <div class="well">
+            <img src="/assets/img/shebang.png" alt="My photo" class="img-rounded" />
+            <h2>About me</h2>
+            <p>
+              Working at <a href="http://intspirit.com/" target="_blank"><strong>IntSpirit</strong></a>
+            </p>
+            <p>
+              All the stuff developer and *nix admin
+            </p>
+            <p>
+              Blog powered by <a href="https://github.com/mojombo/jekyll" target="_blank">Jekyll</a>
+            </p>
+          </div>
+          <div class="well">
+            <h2>Github stats</h2>
+            <div class="git-status">
+            </div>
+          </div>
         </div>
       </div>
       <div class="backToTop text-center">&#8593; top</div>
