--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,8 @@
           {{content}}
 
           {% if page.url != "/index.html" %}
-            <div id="disqus_thread"></div>
+<a href="https://twitter.com/intent/tweet?screen_name=C1nde" class="twitter-mention-button" data-related="C1nde">Tweet to @C1nde</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
             <script type="text/javascript">
               var disqus_shortname = 'c1nde';
               (function() {
